Fixed sidebar z-index and navbar position.

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -39,6 +39,7 @@ body {
   padding-right: 0;
   padding-bottom: 0;
   padding-left: 230px;
+  padding-top: 50px;
   min-height: 400px;
   transition: padding-left 250ms ease-in;
 
